[tool.poetry]
name = "htag"
version = "0.0.0" # auto-updated
description = "GUI toolkit for building GUI toolkits (and create beautiful applications for mobile, web, and desktop from a single python3 codebase)"
authors = ["manatlan <manatlan@gmail.com>"]
readme = 'README.md'
license="MIT"
keywords=['gui', 'electron', "cef", "pywebview", "starlette", "uvicorn", "tornado", "asyncio", "desktop", "web", "mobile", "http", "websocket", "html", "pyscript", "android", "kivy", "apk"]
homepage = "https://github.com/manatlan/htag"
repository = "https://github.com/manatlan/htag"
documentation = "https://manatlan.github.io/htag/"
classifiers = [
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Build Tools",
        "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-cov = "^3"
pytest-asyncio="^0.19"
uvicorn = "^0.18"
starlette = "^0.20"
tornado ="^6.2"
kivy = "*"
pywebview = "^3.6"
fake-winreg = "^1.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"