[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["htag","htag.runners"]

[project]
name = "htag2"
version = "0.1.3"
description = "A modern, state-of-the-art Python GUI framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "manatlan" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "python-multipart>=0.0.22",
    "starlette>=0.40.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/manatlan/htag2"
Repository = "https://github.com/manatlan/htag2.git"
"Bug Tracker" = "https://github.com/manatlan/htag2/issues"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[project.scripts]
htagm = "htag.cmd:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
#addopts = "--cov=htag --cov-report=html --cov-report=xml --cov-report=term-missing"
